Fix Safari logo width on mobile

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -119,7 +119,7 @@
   max-width: var(--max-width) !important;
 }
 
-.navbar {
+/* .navbar {
   background-color: rgba(255, 255, 255, 0.75);
   backdrop-filter: blur(15px);
   box-shadow: none;
@@ -129,7 +129,7 @@
   background-color: rgba(0, 0, 0, 0.75);
   backdrop-filter: blur(15px);
   box-shadow: none;
-}
+} */
 
 .navbar__client__dropdown {
   display: flex;
@@ -158,7 +158,7 @@
 }
 
 .navbar__logo__img {
-  width: 75%;
+  width: 7rem;
 }
 
 .navbar__inner {
